--- a/apps/accounts/static/accounts/css/auth.css
+++ b/apps/accounts/static/accounts/css/auth.css
@@ -1,7 +1,3 @@
-.container {
-    margin: 0;
-}
-
 #authentication {
     font-size: 1.25rem;
     display: flex;
@@ -9,7 +5,6 @@
     justify-content: center;
     flex-wrap: wrap;
     height: 100vh;
-    padding: 1rem 0;
 }
 
 #authentication .authentication-form {
@@ -82,13 +77,8 @@
     font-weight: 300;
 }
 
-@media (max-width: 350px) {
-    #authentication {
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
-    }
-
+@media (max-width: 480px) {
     #authentication .authentication-form {
-        width: 100%;
+        padding: 0.5em;
     }
 }
