--- a/spuiz/templates/main/base.html
+++ b/spuiz/templates/main/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="{% static 'main/img/favicon.ico' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
     {% block styles %}{% endblock styles %}
