--- a/spuiz/static/main/css/styles.css
+++ b/spuiz/static/main/css/styles.css
@@ -9,6 +9,7 @@
     --purple-dark: #190061;
     --purple-normal: #240090;
     --purple-light: #3500d3;
+    --text: #f1f1f1;
     --grey-dark: #1c1c1c;
     --grey-light: #282828;
     --grey-lighter: #2e2e2e;
@@ -26,7 +27,7 @@ html {
 
 body {
     background-color: var(--grey-dark);
-    color: #f1f1ff;
+    color: var(--text);
     margin: 0;
     padding: 0;
 }
@@ -41,7 +42,7 @@ a:hover {
 input {
     font-family: "Font Awesome 5 Free", "Titillium Web", sans-serif;
     background-color: var(--grey-light);
-    color: #f1f1f1;
+    color: var(--text);
     border: none;
     font-size: 1rem;
     padding: 0.5em;
@@ -63,7 +64,7 @@ button {
     font-weight: 700;
     padding: 0.5em 1.5em;
     border-radius: 0.25em;
-    color: #f1f1f1;
+    color: var(--text);
     background-color: var(--purple-light);
     transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in;
 }
