--- a/spuiz/templates/main/dropbox.html
+++ b/spuiz/templates/main/dropbox.html
@@ -1,7 +1,36 @@
 <div class="dropbox">
+
     {{ input }}
     <p>Drop image here or click to upload</p>
-    <img style="display: none;" class="thumbnail-preview">
+
+    {% if preview %}
+    <img class="thumbnail-preview">
+
+    <script>
+        const thumbnail = document.querySelector('.thumbnail');
+
+        const showPreview = (event) => {
+            if (event.target.files.length > 0) {
+                const src = URL.createObjectURL(event.target.files[0]);
+                const preview = event.target.parentElement.getElementsByClassName('thumbnail-preview')[0];
+
+                preview.src = src;
+                preview.style.display = 'block';
+                preview.style.cursor = 'initial';
+            }
+        }
+
+        const clearPreview = (btn) => {
+            const preview = btn.parentElement.parentElement.getElementsByClassName("thumbnail-preview")[0];
+            preview.src = "";
+            preview.style.display = "none";
+            preview.parentElement.removeAttribute("style");
+            preview.parentElement.getElementsByTagName("input")[0].value = "";
+        }
+
+        thumbnail.addEventListener('change', showPreview);
+    </script>
+    {% endif %}
 
     <style type="text/css">
         .dropbox {
@@ -30,6 +59,7 @@
             object-fit: cover;
             position: absolute;
             width: 100%;
+            display: none;
         }
 
         .dropbox input {
@@ -41,4 +71,5 @@
             width: 100%;
         }
     </style>
+
 </div>
