--- a/spuiz/templates/core/base.html
+++ b/spuiz/templates/core/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static 'main/img/favicon.ico' %}" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/styles.css' %}">
     {% block styles %}{% endblock styles %}
     <script src="https://kit.fontawesome.com/653eb1b940.js" crossorigin="anonymous"></script>
     <title>Spuiz - {% block title %}{% endblock title %}</title>
