--- a/apps/quiz/templates/quiz/quiz_create.html
+++ b/apps/quiz/templates/quiz/quiz_create.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'core/base.html' %}
 {% load static %}
 
 {% block title %}Create Quiz{% endblock title %}
@@ -17,7 +17,7 @@
         </div>
         <div class="field thumbnail">
             <h2>{{ form.thumbnail.label }}</h2>
-            {% include 'main/dropbox.html' with input=form.thumbnail preview=True %}
+            {% include 'core/dropbox.html' with input=form.thumbnail preview=True %}
         </div>
         <div class="button-container">
             <input type="button" onclick="clearPreview(this)" value="Reset Thumbnail" class="reset-thumbnail-btn">
