--- a/spuiz/templates/core/dropbox.html
+++ b/spuiz/templates/core/dropbox.html
@@ -40,7 +40,7 @@
             justify-content: center;
             outline: 0.125em dashed var(--text);
             outline-offset: -0.75em;
-            height: 20em;
+            height: 23em;
             background-color: var(--grey-dark);
             position: relative;
             padding: 0.75em;
@@ -60,6 +60,7 @@
             position: absolute;
             width: 100%;
             display: none;
+            border-radius: 0.25em;
         }
 
         .dropbox input {
@@ -69,6 +70,12 @@
             overflow: hidden;
             position: absolute;
             width: 100%;
+        }
+
+        @media (max-width: 490px) {
+            .dropbox {
+                height: 15em;
+            }
         }
     </style>
 
